# phi-playground

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  stable_diffusion_cli.py
evaluation/: run_gsm8k.sh
models/mlx/: microsoft_phi2_model.py
models/pytorch/: bucket_dataloader.py  eval_gsm8k.py  gsm8k.py  pytorch_microsoft_phi_model.py
models/pytorch/train/: finetune.py
models/tensorrt/: CMakeLists.txt  COMPILE.md  Dockerfile  code_utils.py  eval.py
notebooks/: benchmarks_mlx_darwin.ipynb  setup_mlx_darwin.ipynb
notebooks/evaluation/: evaluation_GSM8K_mlx_darwin.ipynb  evaluation_GSM8k_transformers_colab.ipynb
notebooks/inference/: inference_mlx_darwin.ipynb  inference_transformers_darwin.ipynb
scripts/: vastai_install.sh
