[tool.poetry]
name = "phi-playground"
version = "0.1.0"
description = "A playground to modify and improve phi-2 models"
authors = ["Fabrizio (Misto) Milo <mistobaan@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
